syntax = "proto3";
package com.violet.rpc;

message _Request{  
  string token = 1;  
  string rpc = 2;
  int32 unique = 3;
  bytes data = 4;
}

message _Response{  
  string token = 1;
  int32 code = 2;
  string rpc = 3;
  int32 unique = 4;
  bytes data = 5;
}

message PlayerInfo{
  int32 userId = 1;
  string userName = 2;
  int32 level = 3;
  int32 zoneId = 4;
  int32 state = 5; //enum PlayerState
  int32 gameRemainTime = 6;//倒计时时间，默认-1
}

message ChessData{
  int32 chessRemoteId = 1;
  int32 ChessType = 2;//非明牌模式下，默认 -1
  // { "地雷", "炸弹", "工兵", "排长", "连长", "营长", "团长", "旅长", "师长", "军长", "司令", "军旗" }
  ChessPoint point = 3;
  int32 group = 4;//敌我阵营，0为我方  emum ChessGroup
}

message ChessPoint{
  int32 x = 1;
  int32 y = 2;
}

message RoomData{
  int32 roomId = 1;
  string roomName = 2;
}

message MessageData{
  int32 userId = 1;
  int32 zoneId = 2;
  string userName = 3;
  int32 level = 4;
  int64 timestamp = 5;
  string content = 6;
}








/*//////////////////////////一些说明////////////////////
enum PlayerState{
  UNKOWN = 0;
  UNREADY = 1;
  READY = 2;
  GAMING = 3;
  SURRENDER = 4;//投降
}

enum GameState{
  READYING = 0;
  START = 1;
  END = 2;
}

enum GameResult{
  UNKOWN = 0;
  LOSE = 1;
  WIN = 2;
}

enum ChessMoveResult{
  UNKOWN = 0;
  LOSE = 1;
  TIE = 2;//同归于尽，平手
  WIN = 3;
  CAN_MOVE = 4;
  CANNOT_MOVE = 5;
}

enum ChessGroup{
  Myself = 0;
  Enemy = 1;
  //Enemy2 ...
}

*/////////////////////////////